--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="learn_text">Learn more or v <br> isit an Apple Store today</p>
         </div>
         <div class="block1_photo">
-            <img class="img1" src="../img/Img.png" alt="">
+            <img class="img1" src="./img/Img.png" alt="">
         </div>
       </div>
       <div class="block" id="id2">
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="block" id="id3">
-        <div class="photo"><img src="../img/Keyboard.png" alt=""></div>
+        <div class="photo"><img src="./img/Keyboard.png" alt=""></div>
         <div class="our_b">Our Brand <br> New <br> Keyboard</div>
         <div class="learn1">LEARN ˃</div>
       </div>
@@ -42,7 +42,7 @@
             <div class="imac">IMAC.RETINA</div>
             <div class="hardly1">Hardly a month <br> passes these <br> days where</div>
             <div class="macintosh">
-                <img class="right_photo" src="../img/Macintosh.png" alt="">
+                <img class="right_photo" src="./img/Macintosh.png" alt="">
             </div>
         </div>
         <div class="text_id4">
@@ -52,8 +52,8 @@
       </div>
       <div class="block" id="id5">
         <div class="block_id5_photo">
-          <img class="image_oval" src="../img/Oval 54.png" alt="">
-          <img class="image_floppy" src="../img/Floppy.png" alt="">
+          <img class="image_oval" src="./img/Oval 54.png" alt="">
+          <img class="image_floppy" src="./img/Floppy.png" alt="">
           <p class="meet">MEET</p>
           <div class="popular"><input class="button_popular" type="button" value="🍆 POPULAR"></div>
         </div>
@@ -65,7 +65,7 @@
       </div>
       <div class="block" id="id6">
         <div class="photo_games">
-          <img src="../img/Controller.png" alt="">
+          <img src="./img/Controller.png" alt="">
         </div>
         <div class="text_games">
           <p class="passion">Games our <br> pasion</p>
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="block" id="id7">
-        <img class="z_photo" src="../img/Img (3).png" alt="">
+        <img class="z_photo" src="./img/Img (3).png" alt="">
         <div class="button_best_value">
           <input class="button_best" type="button" value="BEST CHOICE">
         </div>
@@ -84,8 +84,8 @@
         </div>
       </div>
       <div class="block" id="id8">
-        <img class="absolut" src="../img/Oval.png" alt="">
-        <img class="absolut_twitter1" src="../img/twitter.png" alt="">
+        <img class="absolut" src="./img/Oval.png" alt="">
+        <img class="absolut_twitter1" src="./img/twitter.png" alt="">
         <p class="text_twitter">Connect with <br> Twitter</p>
       </div>
       <div class="block" id="id9">
@@ -99,28 +99,10 @@
       </div>
       <div class="block" id="id10">
         <div class="televizor">
-          <img src="../img/TV (1).png" alt="">
+          <img src="./img/TV (1).png" alt="">
         </div>
         <div class="text_10">More than just a <br> display, it’s a vision</div>
       </div>
-      <!-- <div class="block" id="id11"></div>
-      <div class="block" id="id12"></div>
-      <div class="block" id="id13"></div>
-      <div class="block" id="id14"></div>
-      <div class="block" id="id15"></div>
-      <div class="block" id="id16"></div>
-      <div class="block" id="id17"></div>
-      <div class="block" id="id18"></div>
-      <div class="block" id="id19"></div>
-      <div class="block" id="id20"></div>
-      <div class="block" id="id21"></div>
-      <div class="block" id="id22"></div>
-      <div class="block" id="id23"></div>
-      <div class="block" id="id24"></div>
-      <div class="block" id="id25"></div>
-      <div class="block" id="id26"></div>
-      <div class="block" id="id27"></div>
-      <div class="block" id="id28"></div> -->
     </div>
     
 </body>
